tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/parameterNameClash.csl
//The second parameter clashes with the first
interface parameterNameClash
{
	void Foo
		( in string fooMe,
		  out int32 fooMe );

};	


